# release_fdmtk

./: .gitignore  CMakeLists.txt  CMakePresets.json  Constants.h  array.cu  array.h  boxcar.cu  boxcar.h  fdmt.cu  fdmt.h  fdmtUtils.cu  fdmtUtils.hpp  fdmt_base.cu  fdmt_base.hpp  fdmt_cpu.cu  fdmt_cpu.hpp  fdmt_gpu.cu  fdmtk.cu  fdmtk.cuh  gpu_kernels.h  readMe.txt  rescale.cu  rescale.h
